src/objects/Commission__c.object
<CustomObject>
    <description>Track the details of how to pay commissions.</description>
    <fields>
        <fullName>AddressLine1__c</fullName>
        <description>New/Associated Address line 1 for this Commission</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The address commission checks paid to this Tax ID should be mailed to</inlineHelpText>
        <label>Address Line 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyId__c</fullName>
        <formula>IF(TEXT(IrsPartnerType__c) == &quot;Agency&quot;, &quot;A-&quot; &amp; Name, &quot;I-&quot; &amp; Name)</formula>
        <inlineHelpText>The unique identification number used for this Commission record throughout VSP&apos;s systems.</inlineHelpText>
        <label>Agency ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>City associated with the Address record</inlineHelpText>
        <label>City</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommissionStatus__c</fullName>
        <inlineHelpText>Indicates if the Partner is still using this commission record information.</inlineHelpText>
        <label>Commission Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ActiveTerminatedValueSet</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IrsPartnerType__c</fullName>
        <inlineHelpText>Indicates whether this Partner is filing taxes as a company or an individual.</inlineHelpText>
        <label>IRS Partner Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegalName__c</fullName>
        <description>The Legal Name of the Partner</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Legal Name the commission payments will be made.</inlineHelpText>
        <label>Legal Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>State of the Address record</inlineHelpText>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxId__c</fullName>
        <description>Indicates the Tax ID the commissions paid to this Partner should be reported under.</description>
        <inlineHelpText>The Tax ID or SSN that they commission payments will be reported to the IRS under.</inlineHelpText>
        <label>Tax ID</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Zip code tied to the Address record</inlineHelpText>
        <label>Zip Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Commission</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>